simplified isn_receiver implementation
